package NKikimrMiniKQLEngine;
option java_package = "ru.yandex.kikimr.proto";

enum EResult {
    Unknown = 0;
    Ok = 1;
    SchemeChanged = 2;
    IsReadonly = 3;
    KeyError = 4;
    ProgramError = 5;
    TooManyShards = 6;
    TooManyData = 7;
    SnapshotNotExist = 8;
    SnapshotNotReady = 9;
    TooManyRS = 10;
    ResultTooBig = 11;
    Cancelled = 12;
};

